# TgChatGateway

./: .dockerignore  Dockerfile  Dockerfile-localtunel  Dockerfile-migrations  README.md  auth.http  docker-compose.yaml  env_example  pyproject.toml  registration.http
alembic/: env.py
alembic/versions/: 57de6c033255_fix_models1.py  6fb22cb9f505_fix_models1.py  7d5a9b890d5c_fix_models1.py  98e07d3e4077_added_username_to_user.py  9f1f334c0fe3_fix_models1.py  a54288cda668_fix_models1.py  b2d30c78c0cc_fix_models1.py  e3e1033b76ac_fix_models1.py  edf0019ea105_fix_models.py  f018819c66b7_fix_models1.py
src/: main.py
src/apps/authentication/: models.py  repositories.py  serializers.py  services.py  views.py
src/apps/telegram_gateway/: models.py  repositories.py  serializers.py  services.py  views.py
src/core/: __init__.py  database.py  services.py  settings.py
src/core/mixins/: model_mixins.py  query_mixins.py
src/providers/: __init__.py
src/providers/chat_gpt_api/: prompts.py  providers.py
src/providers/telegram_api/: providers.py
